# M5Dial-UserDemo

./: .gitignore  CMakeLists.txt  README.md  flash.sh  hotplugSetup.sh  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.m5stack-stamps3  sdkconfig.old
components/simple_encoder_pcnt/: CMakeLists.txt  README.md  simple_encoder_pcnt.cpp  simple_encoder_pcnt.h
components/simple_encoder_pcnt/Button/: Button.cpp  Button.h  LICENSE  README.md
main/: CMakeLists.txt  main.cpp
main/apps/: app.h
main/apps/app_ble_server/: app_ble_server.h
main/apps/app_factory_test/: app_factory_test.cpp  app_factory_test.h  ft_common_define.h
main/apps/app_factory_test/test/: ble_test.cpp  lcd_test.cpp  rtc_test.cpp
main/apps/app_lcd_test/: app_lcd_test.cpp  app_lcd_test.h
main/apps/app_more_menu/: more_menu_render_callback.hpp  more_menu_selected_callback.cpp
main/apps/app_rtc_test/: app_rtc_test.cpp  app_rtc_test.h
main/apps/app_rtc_test/gui/: gui_rtc_test.h
main/apps/app_temp_demo/: app_temp_demo.cpp  app_temp_demo.h
main/apps/app_template/: app_template.cpp  app_template.h
main/apps/app_wifi_scan/: app_wifi_scan.cpp
main/apps/launcher/: launcher_render_callback.hpp
main/apps/launcher/launcher_icons/: icon_ble.h  icon_brigntness.h  icon_lcd.h  icon_more.h  icon_rfid.h  icon_rtc.h  icon_temp.h  icon_wifi.h
main/hal/: hal.cpp  hal.h  hal_common_define.h
main/hal/arduino/: esp32-hal-ledc.c
main/hal/buzzer/: hal_buzzer.hpp
main/hal/display/: hal_display.hpp
main/hal/lvgl/: hal_lvgl.hpp
main/hal/rtc/: hal_rtc.hpp
main/hal/utils/Button/: Button.cpp  (+1 more)
(+112 files in other folders)
